Migrate from the old to new declaration languages.
Implement classes to migrate from the old to new declaration
language.

Refs #113677